[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/textures/HP_Border.png" type="Texture" id=1]
[ext_resource path="res://res/textures/HP_bar.png" type="Texture" id=2]
[ext_resource path="res://res/fonts/FontLVeryLargeText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=4]
[ext_resource path="res://Scenes/KnownTraitContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/fonts/MateSC-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Energy" type="TextureProgress" parent="."]
margin_left = 1194.86
margin_top = 64.8978
margin_right = 1274.86
margin_bottom = 663.898
rect_scale = Vector2( 0.5, 1 )
max_value = 5000.0
value = 45.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hydration" type="TextureProgress" parent="."]
margin_left = 1142.86
margin_top = 64.8978
margin_right = 1222.86
margin_bottom = 663.898
rect_scale = Vector2( 0.5, 1 )
max_value = 10000.0
value = 45.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_over = Color( 0.301961, 0.513726, 0.815686, 1 )
tint_progress = Color( 0.113725, 0.533333, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNAPool" type="TextureProgress" parent="."]
margin_left = 1087.86
margin_top = 64.898
margin_right = 1167.86
margin_bottom = 663.898
rect_scale = Vector2( 0.5, 1 )
max_value = 25.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_under = Color( 0.392157, 0.145098, 0.145098, 1 )
tint_over = Color( 0.752941, 0.815686, 0.301961, 1 )
tint_progress = Color( 0.537255, 0.0392157, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerDNA" type="HBoxContainer" parent="."]
margin_left = 110.0
margin_top = 20.0
margin_right = 946.0
margin_bottom = 81.0
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDied" type="Label" parent="."]
visible = false
margin_left = 452.489
margin_top = 302.658
margin_right = 796.489
margin_bottom = 406.658
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.858824, 0.00392157, 0.00392157, 1 )
text = "You Died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVictory" type="Label" parent="."]
visible = false
margin_left = -25.5153
margin_top = 185.278
margin_right = 1281.48
margin_bottom = 503.278
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.207843, 0.572549, 0.133333, 1 )
text = "You have achieved
 multiplication!
You win!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnownTraitContainer" parent="." instance=ExtResource( 5 )]
margin_left = 18.0
margin_top = 145.0
margin_right = 236.0
margin_bottom = 194.0
